tests/fixtures/invalid/err008_catch_star_not_last.rex
expect {
  observe page "https://example.com" as $page
} otherwise * {
  skip
} otherwise Timeout {
  retry
}
